--- a/src/html/meta/_head.html
+++ b/src/html/meta/_head.html
@@ -2,11 +2,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<meta name="robots" content="none">
-	<meta property="og:title" content="">
+	<meta property="og:title" content="Летний лагерь Атлетик">
 	<meta property="og:description" content="">
 	<meta property="og:image" content="@icons/logo.svg">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<link rel="icon" href="" type="image/x-icon" />
+	<link rel="icon" href="@images/favicon.png" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="@styles/styles.bundle.css" />
 	<title>@@title</title>
 </head>
