--- a/src/html/meta/_head.html
+++ b/src/html/meta/_head.html
@@ -8,5 +8,6 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<link rel="icon" href="@images/favicon.png" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="@styles/styles.bundle.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 	<title>@@title</title>
 </head>
