--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -124,6 +124,16 @@
 				<div class="swiper-button-next"></div>
 			</div>
 		</section>
+
+		<section class="summer container">
+			<h2>Мы сделаем ваше лето лучшим!</h2>
+			<span>Отдельный автобус для покатушек</span>
+			<span>Захватывающие настолки, в которых можно просидеть весь день</span>
+			<span>Большой классный бассейн!</span>
+			<span>Экскурсии и вылазки на мероприятия</span>
+			<span>Активные игры и мастер классы каждый день!</span>
+			@@include('components/ui/_button-link.html', {children: 'Хочу круто провести лето', href: '#application'})
+		</section>
 	</main>
 	<!-- @@include('components/business/_footer.html') -->
 
