--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -551,7 +551,7 @@
 			</form>
 		</section>
 	</main>
-	<!-- @@include('components/business/_footer.html') -->
+	@@include('components/business/_footer.html')
 
 	@@include('meta/_includeScripts.html')
 </body>
