--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -541,6 +541,82 @@
 				</li>
 			</ul>
 		</section>
+		<section class="reviews container">
+			<h2>Отзывы</h2>
+			@@include('components/ui/_button.html', {children: 'Еще отзывы', id: 'show-more'})
+			<div class="reviews__cards">
+				<div class="reviews__card">
+					<p>Анна Каренина, мама Артура</p>
+					<div class="video-container">
+						<video poster="@images/poster.png" preload="none" loop>
+							<source src="@videos/sample-5s.mp4">
+						</video>
+						<button id="playButton" class="video-controler">
+						</button>
+					</div>
+				</div>
+				<div class="reviews__card">
+					<p>Анна Каренина, мама Артура</p>
+					<div class="video-container">
+						<video poster="@images/poster.png" preload="none" loop>
+							<source src="@videos/sample-5s.mp4">
+						</video>
+						<button id="playButton" class="video-controler">
+						</button>
+					</div>
+				</div>
+				<div class="reviews__card">
+					<p>Анна Каренина, мама Артура</p>
+					<div class="video-container">
+						<video poster="@images/poster.png" preload="none" loop>
+							<source src="@videos/sample-5s.mp4">
+						</video>
+						<button id="playButton" class="video-controler">
+						</button>
+					</div>
+				</div>
+				<div class="reviews__card">
+					<p>Анна Каренина, мама Артура</p>
+					<div class="video-container">
+						<video poster="@images/poster.png" preload="none" loop>
+							<source src="@videos/sample-5s.mp4">
+						</video>
+						<button id="playButton" class="video-controler">
+						</button>
+					</div>
+				</div>
+				<div class="reviews__card">
+					<p>Анна Каренина, мама Артура</p>
+					<div class="video-container">
+						<video poster="@images/poster.png" preload="none" loop>
+							<source src="@videos/sample-5s.mp4">
+						</video>
+						<button id="playButton" class="video-controler">
+						</button>
+					</div>
+				</div>
+				<div class="reviews__card">
+					<p>Анна Каренина, мама Артура</p>
+					<div class="video-container">
+						<video poster="@images/poster.png" preload="none" loop>
+							<source src="@videos/sample-5s.mp4">
+						</video>
+						<button id="playButton" class="video-controler">
+						</button>
+					</div>
+				</div>
+				<div class="reviews__card">
+					<p>Анна Каренина, мама Артура</p>
+					<div class="video-container">
+						<video poster="@images/poster.png" preload="none" loop>
+							<source src="@videos/sample-5s.mp4">
+						</video>
+						<button id="playButton" class="video-controler">
+						</button>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section class="application container" id="application">
 			<h2>Оставьте заявку со скидкой </h2>
 			<h3>До 15 мая 2023 года можно забронировать место по цене 12000₽ </h3>
